other_dotfiles/.iptables.rules
*filter

:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

# allow all local traffic on local (127.0.0.1)
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# outbound http/https requests
-A OUTPUT -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT

# outbound dhcp requests
-A OUTPUT -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT

# outbound pings
-A OUTPUT -p icmp -j ACCEPT

# outbound DNS requests
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT

# Discord voice chat
-A OUTPUT -p tcp -m tcp --dport 30000:65535 -m state --state NEW -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 30000:65535 -m state --state NEW -j ACCEPT
-A OUTPUT -p udp -m udp --sport 35000:65535 -j ACCEPT

-A OUTPUT -p tcp -m tcp --dport 9150:9151 -m state --state NEW -j ACCEPT




COMMIT
